Vignette for cstyle

--- a/vignettes/csstyle.Rmd
+++ b/vignettes/csstyle.Rmd
@@ -21,194 +21,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Checklist
-
-- Make sure that your dataset contains all days/weeks (i.e. there can be days/weeks with 0 cases)
-- Use `q <- q + csstyle::theme_cs()`
-- Use `q <- q + geom_col(fill = csstyle::base_color, width = 0.8)`
-- For `scale_y_continuous` use `breaks = csstyle::pretty_breaks(5)`
-- For `scale_y_continuous` use `expand = expansion(mult = c(0, 0.1))`
-- If the x-axis is too cramped, make the labels vertical `q <- q + csstyle::set_x_axis_vertical()`
-- Say when your data was extracted `q <- q + labs(caption = "Data extracted on 2018-02-20")`
-
-If multiple geographical areas:
-- Use `q <- q + lemon::facet_rep_wrap(~location_code, repeat.tick.labels = "y")`
-
-```{r}
-library(ggplot2)
-library(data.table)
-```
-
-## Graphs for one geographical area
-
-Daily epicurve for `county_nor03`
-
-```{r warning=FALSE}
-csstyle::plot_epicurve(
-  covidnor::total[
-    granularity_geo=="nation" &
-    granularity_time=="day" &
-    isoyear==2020
-  ],
-  type = "single",
-  var_x = "date",
-  var_y = "hospital_admissions_main_cause_n"
-)
-```
-
-Weekly epicurve for `county_nor03`
-
-```{r}
-# q <- ggplot(w[location_code=="county_nor03"], aes(x = isoyearweek, y = N))
-# q <- q + geom_col(fill = csstyle::base_color, width = 0.8)
-# q <- q + scale_x_discrete("Isoweek")
-# q <- q + scale_y_continuous("Number of reported cases",
-#   breaks = csstyle::pretty_breaks(5),
-#   expand = expansion(mult = c(0, 0.1))
-# )
-# q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
-# q <- q + labs(caption = fhi_caption())
-# q <- q + csstyle::theme_fhi_lines_horizontal()
-# q
-```
-
-Weekly epicurve with vertical x-axis labels
-
-```{r}
-# q <- ggplot(w, aes(x = isoyearweek, y = N))
-# q <- q + geom_col(fill = csstyle::base_color, width = 0.8)
-# q <- q + scale_x_discrete("Isoweek")
-# q <- q + scale_y_continuous("Number of reported cases",
-#   breaks = csstyle::pretty_breaks(5),
-#   expand = expansion(mult = c(0, 0.1))
-# )
-# q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
-# q <- q + labs(caption = fhi_caption())
-# q <- q + csstyle::theme_fhi_lines_horizontal()
-# q <- q + csstyle::set_x_axis_vertical()
-# q
-```
-
-## Epicurves for multiple geographical areas
-
-When we have multiple geographical areas, we use the function `lemon::facet_rep_wrap` to create multiple epicurves.
-
-Daily epicurve for all geographical areas with vertical x-axis labels
-
-```{r fig.height=10, fig.width=8}
-# q <- ggplot(d, aes(x = date, y = N))
-# q <- q + geom_col(fill = csstyle::base_color, width = 0.8)
-# q <- q + lemon::facet_rep_wrap(~location_code, repeat.tick.labels = "y")
-# q <- q + csstyle::scale_fill_fhi("Location",palette="primary")
-# q <- q + scale_x_date("Date")
-# q <- q + scale_y_continuous("Number of reported cases",
-#   breaks = csstyle::pretty_breaks(5),
-#   expand = expansion(mult = c(0, 0.1))
-# )
-# q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
-# q <- q + labs(caption = fhi_caption())
-# q <- q + csstyle::theme_fhi_lines_horizontal()
-# q <- q + csstyle::set_x_axis_vertical()
-# q
-```
-
-Weekly epicurve with vertical x-axis labels
-
-```{r fig.height=10, fig.width=8}
-# q <- ggplot(d, aes(x = isoyearweek, y = N))
-# q <- q + geom_col(fill = csstyle::base_color, width = 0.8)
-# q <- q + lemon::facet_rep_wrap(~location_code, repeat.tick.labels = "y", ncol=4)
-# q <- q + scale_fill_fhi("Location",palette="primary")
-# q <- q + scale_x_discrete("Isoweek")
-# q <- q + scale_y_continuous("Number of reported cases",
-#   breaks = csstyle::pretty_breaks(5),
-#   expand = expansion(mult = c(0, 0.1))
-# )
-# q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
-# q <- q + labs(caption = fhi_caption())
-# q <- q + theme_fhi_lines_horizontal()
-# q <- q + csstyle::set_x_axis_vertical()
-# q
-```
-
-## Coloured epicurves
-
-Sometimes you would like to add colours to differentiate between different variables. This can be done through the `fill` attribute.
-
-```{r}
-q <- ggplot(w[location_code %in% c(
-  "county_nor03",
-  "county_nor11",
-  "county_nor15",
-  "county_nor30",
-  "county_nor34")], 
-  aes(x = isoyearweek, y = N, fill = location_code))
-q <- q + geom_col(width = 0.8)
-q <- q + csstyle::scale_fill_fhi("Location",palette="primary")
-q <- q + scale_x_discrete("Isoweek")
-q <- q + scale_y_continuous("Number of reported cases",
-  breaks = csstyle::pretty_breaks(5),
-  expand = expansion(mult = c(0, 0.1))
-)
-q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
-q <- q + labs(caption = fhi_caption())
-q <- q + csstyle::theme_fhi_lines_horizontal()
-q <- q + csstyle::set_x_axis_vertical()
-q
-```
-
-## Right axis on epicurve
-
-Sometimes you would like to add colours to differentiate between different variables. This can be done through the `fill` attribute.
-
-```{r}
-pd <- w[location_code %in% "county_nor03"]
-pd[, cum_n := cumsum(N)]
-
-pd[, value_left := N]
-pd[, value_right := cum_n]
-
-max_left <- max(pd$value_left)
-max_right <- max(pd$value_right)
-
-# increase the space in the y-axis
-max_left <- max(c(max_left, 5))
-max_right <- max(c(max_right, 5))
-
-pd[, scaled_value_right := value_right / max_right * max_left]
-
-q <- ggplot(pd, aes(x = isoyearweek))
-q <- q + geom_col(
-  mapping = aes(
-    y = value_left,
-    fill = "The fill variable",
-  ),
-  width = 0.8
-  )
-q <- q + geom_line(
-  mapping = aes(
-    y = scaled_value_right,
-    group = 1,
-    color = "The color variable"
-  ),
-  lwd = 2
-  )
-q <- q + scale_x_discrete("Isoweek")
-q <- q + scale_y_continuous("Number of reported cases",
-  breaks = csstyle::pretty_breaks(5),
-  expand = expansion(mult = c(0, 0.1)),
-  sec.axis = sec_axis(
-    name = "Cumulative number of reported cases\n",
-    ~ . * max_right / max_left,
-    breaks = csstyle::pretty_breaks(5),
-    labels = csstyle::format_nor
-  )
-)
-q <- q + csstyle::scale_fill_fhi("Fill", palette = "primary")
-q <- q + csstyle::scale_color_fhi("Color", palette = "posneg")
-q <- q + labs(title = "Epicurve from 2018-01-01 to 2018-02-20")
-q <- q + labs(caption = fhi_caption())
-q <- q + csstyle::theme_fhi_lines_horizontal()
-q <- q + csstyle::set_x_axis_vertical()
-q
-```
+| Col1     | Col2            | Col3              |
+|----------|-----------------|-------------------|
+| Epicurve | Single facet    | Single fill color |
+|          | Single facet    | Fills stacked     |
+|          | Single facet    | Fills dodged      |
+|          | Multiple facet  | Single fill color |
+|          | Multiple facets | Fills stacked     |
+|          | Multiple facets | Fills dodged      |
