--- a/vignettes2/seasonal_timeseries.Rmd
+++ b/vignettes2/seasonal_timeseries.Rmd
@@ -62,9 +62,13 @@ d_isoweek <- covidnor::total[
 ```{r}
 csstyle::plot_seasonal_timeseries(
   d_isoweek[location_code %in% c("county_nor03")],
-  var_x = "isoyearweek",
-  var_y = "cases_by_testdate_vs_pop_pr100000",
-  breaks_x = seq(1,52, 4),
+  x_var = "isoyearweek",
+  x_breaks = seq(1,52, 4),
+  x_lab = "Isoweek",
+  y_var = "cases_by_testdate_vs_pop_pr100000",
+  y_labels = csstyle::format_num_as_nor_per100k_0,
+  lab_title = "COVID-19 cases per 100 000 population.",
+  lab_subtitle = "Cases are recorded by date of positive PCR-test.",
   # breaks_x = csstyle::every_nth(8),
   #breaks_x = c(3, 6),
   wide_table = FALSE,
